--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+:root{
+  --dark-color: #1d1d1d;
+  --light-color: #ffffff;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -7,17 +12,50 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+.card-grid{
+  display: flex;
+  justify-content: space-evenly;
+  gap: .5rem;
+  width: 90vw;
+  height: auto;
+  flex-wrap: wrap;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
 .favButton{
+  padding: 10px;
+  border: none;
+  border-radius: .3rem;
+  width: 100%;
+  cursor: pointer;
+}
+
+.favButton.light{
   background-color: rgba(136, 136, 136, 0.116);
   padding: 10px;
   border: none;
   width: 100%;
   cursor: pointer;
 }
+.favButton.light:hover{
+  background-color: rgba(136, 136, 136, 0.3);
+}
+
+.favButton.dark{
+  background-color: #fff;
+  padding: 10px;
+  border: none;
+  width: 100%;
+  cursor: pointer;
+}
+.favButton.dark:hover{
+  background-color: rgba(255, 255, 255, 0.3);
+}
+
 
 h1{
   text-align: center;
@@ -25,40 +63,60 @@ h1{
 
 nav{
   display: flex;
-  width: 80vw;
-  justify-content: flex-start;
-  padding: 1rem;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1rem 6rem;
+  flex-wrap: wrap;
 }
 
-a{
-  color: #000;
+.nav-links{
+  display: flex;
+  gap: 1rem;
+}
+
+.navbar.a{
   text-decoration: none;
   margin: 5px;
   cursor: pointer;
 }
-a:hover{
+.navbar.a:hover{
   color: rgb(136, 136, 136);
 } 
 
 footer {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   text-align: center;
-  padding: 2rem;
+  padding: 1rem 6rem;
   position: relative;
   bottom: 0;
-  width: 90%;
-  height: 40px;
   margin-top: 2rem;
 }
 
-footer > img{
+footer figure img{
   width: 200px;
   margin: 0;
 }
-footer > p{
+footer figure img.light{
+  filter: invert(0);
+}
+footer figure img.dark{
+  filter: invert(1);
+}
+
+footer figure figcaption{
   margin: 0;
   padding-top: 0.7rem;
+}
+
+.form-container{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;  
+  width: 100%;
+  height: 100%;
+  margin: 0 auto;
 }
 
 form{
@@ -66,16 +124,37 @@ form{
   flex-direction: column;
   justify-content: space-around;
   width: 300px;
-  height: 100px;
   margin: 0 auto;
 }
+
+.form-input{
+  padding: 1rem;
+  border-radius: 5px;
+  margin: .5rem 0;
+}
+
+.form-input.light{
+  border:2.3px solid #000000;
+}
+.form-input.dark{
+  border: 2.3px solid rgb(224, 97, 12);
+}
+.form-button{
+  padding: 1rem;
+  border-radius: 5px;
+  cursor: pointer;
+}
+.form-button:hover{
+  background-color: rgb(159, 247, 45);
+}
+
 
 .card{
   display: flex;
   justify-content: space-around;
   flex-direction: column;
   align-items: center;
-  width: 200px;
+  width: 300px;
   padding: 0.5rem 0.5rem 0 0.5rem;
   border: 0.5px solid rgb(136, 136, 136);
 }
@@ -93,8 +172,14 @@ form{
   flex-wrap: wrap;
   margin: 0 auto;
 }
+.card__image{
+  width: 100px;
+  height: 100px;
+  padding-top: 1rem;
+  border-radius: 50%;
+}
 
-table {
+.detail-table {
  border-collapse: collapse;
     border-spacing: 0;
     width: 100%;
@@ -109,14 +194,117 @@ td, th {
   padding: 8px;
 }
 
-tr:nth-child(even) {
-  background-color: #dddddd;
+.app {
+  transition: background-color 0.3s, color 0.3s;
+  min-height: 100vh;
+  height: 100%;
 }
 
-.dark{
-  background-color: #12121296;
-  color: white;
+.app.light {
+  background-color: var(--light-color);
+  color: var(--dark-color);
 }
-.dark > a {
-  color: white;
+
+.app.dark {
+  background-color: var(--dark-color);
+  color: var(--light-color);
+}
+
+.navbar.light.a {
+  background-color: #f8f9fa;
+  color: #000000;
+}
+
+.navbar.dark.a {
+  background-color: #343a40;
+  color: #ffffff;
+}
+
+.card {
+  padding: 1em;
+  border-radius: 5px;
+}
+
+.card.light {
+  background-color: #f0f0f0;
+  color: #000000;
+}
+
+.card.dark {
+  background-color: #2c2c2c;
+  color: #ffffff;
+}
+.card-link{
+  padding: 0.5em;
+  border-radius: 4px;
+  transition: color 0.3s, background-color 0.3s;
+}
+.card-link.light {
+  color: #6f00ff;
+}
+.card-link.dark {
+  color: #8d3af8;
+}
+
+.link {
+  text-decoration: none;
+  padding: 0.5em;
+  border-radius: 4px;
+  transition: color 0.3s, background-color 0.3s;
+}
+
+.link.light {
+  color: #000000;
+}
+
+.link.dark {
+  color: #ffffff;
+}
+
+.link.light:hover {
+  background-color: #d1d1d1;
+}
+
+.link.dark:hover {
+  background-color: #444444;
+}
+
+.navbar_button{
+  border: none;
+  font-size: 1.5rem;
+  padding: .3rem;
+  border-radius: .5rem;
+}
+.navbar_button:hover{
+  cursor: pointer;
+}
+
+.navbar_button.light {
+  background-color: #000000;
+}
+
+.navbar_button.dark {
+  background-color: #ffffff;
+}
+
+.social-icons{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+}
+
+.social-icons img{
+  width: 2rem;
+}
+.social-icons img.light{
+  filter: invert(1);
+}
+.social-icons img.dark{
+  filter: invert(0);
+
+}
+
+.contact-title, .contact-text{
+  padding-left: 6rem;
 }
